--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "chai": "^3.4.1",
     "cli-color-tty": "^2.0.0",
+    "concat-files": "^0.1.0",
     "dapphub": "0.0.7",
     "deasync": "^0.1.4",
     "dir-compare": "0.0.2",
@@ -66,6 +67,7 @@
     "js-yaml": "^3.5.2",
     "json-schema-defaults": "^0.1.1",
     "lazreq": "^0.1.1",
+    "list-directory-contents": "0.0.3",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.4",
